--- a/src/styles.css
+++ b/src/styles.css
@@ -33,13 +33,17 @@ h5 {
   text-align: center;
   font-family: var(--heading-font);
 }
-
+p {
+  font-size: 20px;
+  line-height: 1.5;
+  text-align: center;
+}
 .headingOne {
-  font-size: 36px;
+  font-size: 46px;
   font-weight: 400px;
 }
 .headingThree {
-  font-size: 24px;
+  font-size: 36px;
   font-weight: 400;
 }
 .contactButton {
@@ -60,7 +64,25 @@ img {
 .starter {
   text-align: start;
   font-family: var(--heading-font);
-  font-size: 20px;
+  font-size: 24px;
   font-style: italic;
   font-weight: bold;
+}
+@media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
+
+  p {
+    font-size: 16px;
+  }
+  .headingOne {
+    font-size: 36px;
+  }
+  .headingThree {
+    font-size: 24px;
+  }
+  .contactButton {
+    font-size: 16px;
+  }
 }
