created a contact page

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,7 @@
   --secondry-border-radious: 10px;
   --box-shadow: 5px 5px 5px;
   --name-font: "Dancing Script", cursive;
-  --heading-font: Poppins;
+  --heading-font: "Poppins", sans-serif;
 }
 .hero {
   text-align: center;
@@ -126,4 +126,13 @@ img {
   opacity: 70%;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+.get-in-touch {
+  font-family: var(--heading-font);
+  font-size: 56px;
+  padding: 120px 60px;
+  margin-top: 20px;
+}
+a {
+  text-decoration: none;
 }
