--- a/src/styles.css
+++ b/src/styles.css
@@ -27,7 +27,7 @@
 h1 {
   text-align: center;
   font-family: var(--name-font);
-  font-size: 96px;
+  font-size: 64px;
 }
 h5 {
   text-align: center;
@@ -39,11 +39,11 @@ p {
   text-align: center;
 }
 .headingOne {
-  font-size: 46px;
+  font-size: 36px;
   font-weight: 400px;
 }
 .headingThree {
-  font-size: 36px;
+  font-size: 24px;
   font-weight: 400;
 }
 .contactButton {
@@ -55,11 +55,11 @@ p {
   font-size: 24px;
   background: var(--box-background);
 }
-img {
+.main-picture {
   display: block;
   margin: auto;
-  width: 400px;
-  height: 400px;
+  width: 250px;
+  height: 250px;
   object-fit: cover;
 }
 .starter {
@@ -71,17 +71,17 @@ img {
 }
 @media (max-width: 900px) {
   h1 {
-    font-size: 60px;
+    font-size: 50px;
   }
 
   p {
     font-size: 16px;
   }
   .headingOne {
-    font-size: 36px;
+    font-size: 24px;
   }
   .headingThree {
-    font-size: 24px;
+    font-size: 20px;
   }
   .contactButton {
     font-size: 16px;
@@ -104,14 +104,14 @@ img {
   font-family: var(--heading-font);
   font-size: 24px;
 }
-.icon {
-  font-size: 64px;
-}
+
 .look {
   font-style: italic;
   font-weight: bold;
-  text-align: left;
+  text-align: center;
   font-size: 30px;
+  background: var(--secondry-background);
+  border-radius: var(--secondry-border-radious);
 }
 .projectTitle {
   text-align: center;
@@ -135,4 +135,54 @@ img {
 }
 a {
   text-decoration: none;
+}
+.logo {
+  max-width: 50px;
+  max-height: 50px;
+  display: flex;
+  justify-content: left;
+}
+nav {
+  padding: 20px 0px;
+}
+nav li {
+  display: inline;
+  list-style: none;
+  line-height: 42px;
+  padding-right: 10px;
+}
+
+nav ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+nav a {
+  color: black;
+  font-family: var(--heading-font);
+  font-size: 16px;
+}
+nav a:hover,
+nav a:active {
+  color: rgb(129, 30, 30);
+  font-size: 20px;
+}
+@media (max-width: 500px) {
+  nav a {
+    font-size: 10px;
+  }
+  nav li {
+    padding-right: 5px;
+  }
+  .title-name {
+    display: none;
+  }
+}
+
+.nav-name {
+  font-family: var(--name-font);
+  font-size: 24px;
+  margin: 0;
+  padding: 0;
+  text-align: left;
 }
