--- a/src/styles.css
+++ b/src/styles.css
@@ -186,3 +186,26 @@ nav a:active {
   padding: 0;
   text-align: left;
 }
+.work-together-one {
+  font-family: "Times New Roman", Times, serif;
+}
+.work-together-two {
+  margin-top: 25px;
+}
+.work-inquiry {
+  background: var(--secondry-background);
+  border-radius: var(--border-radious);
+  padding: 10px 20px;
+}
+
+footer {
+  text-align: center;
+}
+.contact-item {
+  font-size: 24px;
+  margin: 0px 20px;
+  padding: 12px 18px;
+  border-radius: 50%;
+  color: black;
+  background: #f17070;
+}
